fix: 移除 Java 9+ 的 List.of，改用 Java 8 兼容写法